[package]
name = "rs2js"
version = "0.2.3"
edition = "2021"
description = "A macro to convert Rust structs to/from JsValues"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Rs2Js"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs2js_macro = { path = "macro", version = "0.2.3" }
wasm-bindgen = "0.2"
anyhow = "1.0"
js-sys = "0.3"
serde = { version = "1.0" }
serde-wasm-bindgen = "0.4"
