[package]
name = "rs2js_macro"
version = "0.2.0"
edition = "2021"
description = "A macro to convert Rust structs to/from JsValues"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
pretty_assertions = "1.3"
